--- a/index.md.erb
+++ b/index.md.erb
@@ -45,6 +45,7 @@ There's a required (co-requisite) 2 credit lab course. This lab will meet once a
 #### Prerequisites and admission
 
 * This course is also open to undergraduates with permission of the instuctor.
-* All students are expected to be good programmers, at the level of a B+ in Cosi 21a.
+* All students are expected to be good programmers: B+ or better in Cosi 21a.
+* If you want to propose a product then you will have to submit a detailed product proposal ahead of time!
 
 ##### For more information contact Pito Salas, pitosalas@brandeis.edu
