--- a/index.md.erb
+++ b/index.md.erb
@@ -5,7 +5,7 @@ order: 0
 ---
 <div class="hero-unit">
 	<h2>Software Engineering for ITE</h2>
-	<p>Learn how Software Engineering is done in the real world as you work in a team of students to design, architect, test, and deliver an actual product. Learn and apply established and emerging technologies, processes and techniques to all stages of product creation. This is a fun, hands-on and programming intensive course.</p>
+	<p>Learn how Software Engineering is done in the real world as you work in a team of students to design, architect, test, and deliver an actual product. Learn and apply established and emerging technologies, processes and techniques to all stages of product creation. Learn advanced concepts as you apply them in this hands-on, programming intensive course.</p>
 	<p>Pito Salas, pitosalas@brandeis.edu</p>
 </div>
 
@@ -40,7 +40,7 @@ The aim is to make this course lecture-light and experience heavy. Students will
 
 #### Lab
 
-There's a required (co-requisite) 2 credit lab course. This lab will meet once a week for two hours and will be handled by at least one instructor. Students will have a chance to program, debug, and get help from peers and instructors during this period.
+Cosi 202b is a required (co-requisite) 2 credit companion lab. This lab will meet once a week for two hours and will be handled by at least one instructor. Students will have a chance to program, debug, and get help from peers and instructors during this period.
 
 #### Prerequisites and admission
 
