--- a/index.md.erb
+++ b/index.md.erb
@@ -5,7 +5,10 @@ order: 0
 ---
 <div class="hero-unit">
 	<h2>Software Engineering for ITE</h2>
-	<p>Learn how Software Engineering is done in the real world as you work in a team of students to design, architect, test, and deliver an actual product. Learn and apply established and emerging technologies, processes and techniques to all stages of product creation. Learn advanced concepts as you apply them in this hands-on, programming intensive course.</p>
+	<p>Learn how Software Engineering is done in the real world as you work in a team of students to 
+	design, architect, test, and deliver an actual product. Learn and apply established
+	and emerging technologies, processes and techniques to all stages of product creation.
+	Learn advanced concepts as you apply them in this hands-on, programming intensive course.</p>
 	<p>Pito Salas, pitosalas@brandeis.edu</p>
 </div>
 
