First round of serious content addition

--- a/index.md.erb
+++ b/index.md.erb
@@ -1,9 +1,10 @@
 ---
 title: Welcome!
-section: intro
-order: 0
+section: root
+order: 1
+type: page
 ---
-<div class="hero-unit">
+<div class="jumbotron"> 
 	<h2>Software Engineering for ITE</h2>
 	<p>Learn how Software Engineering is done in the real world as you work in a team of students to 
 	design, architect, test, and deliver an actual product. Learn and apply established
@@ -19,7 +20,7 @@ This is a programming intensive course where the expectation is that students do
 Students will form teams of three or four to design, architect, implement and test a real product. You will be expected to apply good software engineering to this project, and demonstrate the ability to work as a team, navigating the inevitable setbacks and challenges. 
 
 The product ideas will come form one of three sources:
-
+ 
 1. Products designed during the previous “IT Entrepreneurship” course (235a), 
 1. Well thought out and documented product concepts brought to the first day of class, or
 1. One of a set of suggested products supplied by the instructors. 
