added some notes and resources about unix shell

--- a/lab/unix_shell.md.erb
+++ b/lab/unix_shell.md.erb
@@ -4,3 +4,18 @@ section: lab
 order: 1
 type: page
 ---
+### What is Unix Shell?
+
+Unix shell is a command-line interface (shell) for Unix-like operating systems through which user enters commands as text. The command-line interpreter then executes the command and returns the results. The most common shells in Unix was Bourne shell and C shell, and then Bash (Bourne-Again Shell) was developed as original Unix shell.
+
+We will talk about most useful shell commands but here are some very good free resources for you to learn more about shell and command line:
+
+* [Learning the Shell](http://linuxcommand.org/learning_the_shell.php): an introduction to shell and basic commands
+* [The Command Line Crash Course](http://cli.learncodethehardway.org/book/): a super fast course in using command line for FREE.
+* [BashGuide](http://mywiki.wooledge.org/BashGuide): a Bash guide for learning more about commands and writing shell scripts
+* [Bash Reference Manual](http://www.gnu.org/software/bash/manual/bashref.html): Bash reference manual
+
+And here are some great books:
+
+* [A Practical Guide to Linux Commands, Editors, and Shell Programming](http://www.amazon.com/Practical-Guide-Commands-Editors-Programming/dp/013308504X/ref%3Dsr_1_1?s%3Dbooks&ie%3DUTF8&qid%3D1358418389&sr%3D1-1&keywords%3Dsobell%2Blinux)
+* [UNIX and Linux System Administration Handbook](http://www.amazon.com/Linux-System-Administration-Handbook-Edition/dp/0131480057/ref%3Dpd_sim_b_3): a comprehensive book for anyone who wants to know about Linux system administration
