updated unix shell notes

--- a/lab/unix_shell.md.erb
+++ b/lab/unix_shell.md.erb
@@ -6,7 +6,7 @@ type: page
 ---
 ### What is Unix Shell?
 
-Unix shell is a command-line interface (shell) for Unix-like operating systems through which user enters commands as text. The command-line interpreter then executes the command and returns the results. The most common shells in Unix was Bourne shell and C shell, and then Bash (Bourne-Again Shell) was developed as original Unix shell.
+Unix shell is a command-line interface (shell) for Unix-like operating systems through which user enters commands as text. The command-line interpreter then executes the command and returns the results. The most common shells in Unix were Bourne shell and C shell, and then Bash (Bourne-Again Shell) was developed as the original Unix shell.
 
 We will talk about most useful shell commands but here are some very good free resources for you to learn more about shell and command line:
 
