added Carpe Diem product

--- a/incubator/proposing_product.md.erb
+++ b/incubator/proposing_product.md.erb
@@ -28,14 +28,14 @@ In order to propose a product you need to submit an Incubator Product Proposal.
 
 * **Product Summary:** (1-3 paragraphs)
 
+* **Elevator pitch:** [Elevator Pitch as you might use for a non-technical business savvy person, for example a senior member of Brandeis administration 
+
 * **Describe the customer(s):** [a few sentences]
 
 * **Describe what "jobs" the product will do for the customer:** [a few sentenecs]
 
-* **Customer Pains:** [describe what problems the product will eliminate for the customer]
+* **Customer Pains/Gains:** [describe what problems the product will solve for the customer]
 
-* **Customer Gains:** [describe what useful new goodness the product will bring the customer]
-
-* **Elevator pitch:** [Elevator Pitch as you might use for a non-technical business savvy person, for example a senior member of Brandeis administration 
+* **Money**: [how might this product become self-sustaining or even profitable?]
 
 * **Personal statement:** [why I think this is a product that should be built, and why I want to build it]
