add major term overview and learning objectives

--- a/incubator/carpediem.md.erb
+++ b/incubator/carpediem.md.erb
@@ -1,11 +1,9 @@
 ---
-title: Carpe Diem Product - Incubator Product Option
+title: Option - Carpe Diem
 section: incubator
 order: 1
 type: page
 ---
-
-
 ### Carpe Diem: "Seize the Day"
 
 ##### Incubator Product Option
