add next and prev links, allow for more than one lecture structured section

--- a/incubator/believe_hype.md.erb
+++ b/incubator/believe_hype.md.erb
@@ -1,6 +1,7 @@
+---
 title: Option - Believe the Hype
 section: incubator
-order: 1
+order: 3
 type: page
 ---
 ### Believe the Hype
@@ -11,7 +12,7 @@ type: page
 
 * **Product Name**: Believe the Hype
 
-* **Team Members**: TBD
+* **Team Members**: TB
 
 **Tweet Length Summary**: App that allows for fans to rate local fighters through fighter profiles and for bookers to search for who the fan believes are the most exciting fighters.
 
