--- a/incubator/carpediem.md.erb
+++ b/incubator/carpediem.md.erb
@@ -1,7 +1,7 @@
 ---
 title: Option - Carpe Diem
 section: incubator
-order: 1
+order: 2
 type: page
 ---
 ### Carpe Diem: "Seize the Day"
@@ -51,3 +51,5 @@ type: page
 		* Makes it easier for new members to become active community members
 <p></p>
 * **Personal statement:** I've seen the popularity of this service at Olin, and also see that the Olin approach cannot scale to a larger community. I also know from talking to students that many feel like they don't know what is going on in their areas of interest. Another point that has been made is that there are random blocks of free time when people are interested in participating in something but don't have a good way to find out what's around.
+
+> This, from an Olin Student: So, Carpe as a mailing list is the destination for serendipity. People send out emails about Urban Outfitters sales, free stuff, free food, cool events, anything Oliners could find interesting. I could imagine a mobile app version allows anyone to flash-submit an interesting on-campus occurrence or student-relevant event outside of campus. I’m sorting of thinking of slickdeals.net (a community-sourced deals site) but on a way shorter time scale and with more diverse items. It’d have to be really easy to send a Carpe, or maybe the app could watch a mailing list and apply some filters to deliver the user Carpe’s most relevant to them (for example, I want to know if someone is handing out computer RAM but I don’t care about free kale). It could be like a low-latency craigslist, especially if the communication is done instantly in-app.
