--- a/intro/detailed_schedule.md.erb
+++ b/intro/detailed_schedule.md.erb
@@ -6,4 +6,4 @@ type: page
 ---
 Here is the detailed, lecture by lecture, plan for the term....
 
-<%= generate_detailed_schedule %> 
+<%= generate_detailed_schedule :lectures %> 
