--- a/intro/term_overview.md.erb
+++ b/intro/term_overview.md.erb
@@ -1,11 +1,9 @@
 ---
-title: Term Overview
+title: High Level Overview 
 section: intro
 order: 1
 type: page
 ---
-
-#### High Level Overview
 
 The semester is organized into five "iterations"
 
