--- a/intro/pre_work.md.erb
+++ b/intro/pre_work.md.erb
@@ -9,11 +9,23 @@ type: page
 
 #### What you can do before the first class
 
-1. Learn Ruby thoroughly. I suggest you use one of these online ruby courses and take it from start to end. Ruby is a very cool language with basic and advanced features. We will have a brief time at the start of the course to get into Ruby but it will really pay off if you get ahead on this.
-	1. [Try Ruby](http://tryruby.org/levels/1/challenges/0)
-	1. [Codecademy Ruby](http://www.codecademy.com/tracks/ruby)
-1. Do Programming Assignment 1 (PA1). This will both get a major initial homework out of the way but also prove to yourself that you've gotten a good sense of Ruby and how to use it.
-1. Learn Rails. 
+* **Learn Ruby thoroughly.** Ruby is a very cool language with basic and advanced features. We will have a brief time at the start of the course to get into Ruby but it will really pay off if you get ahead on this.
+
+	Depending on how you best learn there are several approaches to take for learning Ruby. You can of course just use google to find resources and tutorails. Better do use one of these recommended resources:
+
+	1. Required book: [Programming Ruby](http://www.amazon.com/Programming-Ruby-1-9-2-0-Programmers/dp/1937785491/ref=dp_ob_title_bk)
+	1. Free online tutorial: [Try Ruby](http://tryruby.org/levels/1/challenges/0)
+	1. Cheap online course: [Codecademy Ruby](http://www.codecademy.com/tracks/ruby)
+	1. Free onine tutorial: [Ruby in 100 Minutes](http://tutorials.jumpstartlab.com/projects/ruby_in_100_minutes.html)
+	1. Non-free online tutorial: [Ruby Off Rails]([Ruby Off Rails](https://rubyoffrails.com))
+<br/>
+<br/>
+* **Do Programming Assignment 1 (PA1)**. This will both get a major initial homework out of the way but also prove to yourself that you've gotten a good sense of Ruby and how to use it.
+<hr/>
+* **Learn Rails** Rails is basically a large Ruby library to allow you to design and implement sophisticated, professional web applications. Again googling will find you lots of good resources. However I do recommend you follow a somewhat more structured approach:
+	* You read and do the sample app in the Agile Web Development with Rails book. I have done it and it is very good and gets you writing real code pretty quickly.
+	* Or again follow an online course. I have looked into and viewed some sessions of a course called Ruby Off Rails. It is also recommended: 
+
 
 ##### Required Books
 
