--- a/lectures/iter1/03_ruby2.md.erb
+++ b/lectures/iter1/03_ruby2.md.erb
@@ -3,7 +3,8 @@ title: More Ruby
 type: page
 ---
 #### Homework for today
-* Read [Sandy Metz's Rules](http://robots.thoughtbot.com/sandi-metz-rules-for-developers)
+* Read [Sandy Metz's Rules](http://robots.thoughtbot.com/sandi-metz-rules-for-developers). Be ready to explain them in class.
+* Read Chapter 4 (Introduction to Ruby) in AWDR. It will be a good review of what you've worked on so far. I am sure you will find some new insights and goodies there. Try out code examples from the book. 
 
 
 ##### Programming Assignments
