--- a/lectures/iter1/05_rails_intro.md.erb
+++ b/lectures/iter1/05_rails_intro.md.erb
@@ -4,6 +4,11 @@ section: lectures
 type: page
 order: 5
 ---
+##### Homework due for today
+* Read Chapter 2, "Instant Gratification", in AWDR. I highly recommend you follow along with the coding examples and stick with it untill you get it to work. I expect that you will not 'understand' much of what is going on, but try not to let that worry you. One of the objections that some people have about Rails is that there is too much 'magic'. I hope that by the end of the course you will understand what is happening and why, and the 'magic' will turn into 'convenience' and 'productivity/'
+
+##### Quick Intro to Rails
+
 * Quick Intro to Rails
 * Models
 * Views
