--- a/lectures/iter3/03_views_part1.md.erb
+++ b/lectures/iter3/03_views_part1.md.erb
@@ -4,6 +4,8 @@ section: lectures
 type: page
 ---
 ##### Homework due for today's lecture
+* Study: [Action View Overview](http://guides.rubyonrails.org/action_view_overview.html)
+* Study, and try out all the code samples of 
 
 ##### Going back to the start
 * Doing a Rails Hello World, again
