--- a/lectures/iter1/06_url_intro.md.erb
+++ b/lectures/iter1/06_url_intro.md.erb
@@ -3,6 +3,7 @@ title: URLs and Routing
 type: page
 ---
 ##### Homework due for today
+* Read Chapter 3, "The Architecture of Rails Applications" in AWDR. Again I strongly recommend that you work through all the code examples and try to understand what you can. It is complicated and we will go over it many times during this course so expect to not follow everything.
 
 ##### Welcome to URLs
 * Parts of the URL
