--- a/cribsheets/04_git.md.erb
+++ b/cribsheets/04_git.md.erb
@@ -2,7 +2,7 @@
 title: Git and Github
 type: page
 ---
-###What is git?
+###What is Git?
 
 Git is a [version control system](http://git-scm.com/book/en/Getting-Started-About-Version-Control) that keeps track of changes to files, so that you can have a history of all the changes made to a file and you can revert to a specific version later on. Here are some features of Git:
 
@@ -12,4 +12,17 @@ Git is a [version control system](http://git-scm.com/book/en/Getting-Started-Abo
 * Merging branches into one branch
 * ...
 
-Here is a free online book if you want to learn more about Git: [Pro Git](http://git-scm.com/book).
+There are tons of online resources available for learning git. Below is a list of some that you may find useful:
+
+* [try.github.com](http://try.github.com/) (beginner)
+* [Git Tutorial](http://www.ralfebert.de/tutorials/git/) (beginner)
+* [Git Ready](http://gitready.com/) (from beginner to advanced)
+* [Learn Git Branching](http://pcottle.github.io/learnGitBranching/) (beginner/intermediate)
+* [Understanding Git Conceptually](http://www.sbf5.com/~cduan/technical/git/) (intermediate)
+* [Pro Git](http://git-scm.com/book) (advanced)
+* [Git Magic](http://www-cs-students.stanford.edu/~blynn/gitmagic/) (advanced)
+
+
+###What is Github?
+
+Github is a web application that provides hosted version control services using Git. You can sign up and create public repositories for free, but you should pay to create private repositories. There are other similiar services among which are [BitBucket](http://bitbucket.org) and [Gitent](https://gitent-scm.com).
