--- a/intro/01_pre_work.md.erb
+++ b/intro/01_pre_work.md.erb
@@ -33,6 +33,8 @@ This work is not required (after all it is winter break). For those of you who r
 	1. [Agile Web Development with Rails 4](http://www.amazon.com/Agile-Development-Rails-Facets-Ruby/dp/1937785564)
 	1. [Programming Ruby](http://www.amazon.com/Programming-Ruby-1-9-2-0-Programmers/dp/1937785491/ref=dp_ob_title_bk)
 
+<%= include_topic :rails_resources %>
+
 ##### Resources you will use constantly
 
 * [Stack Overflow](http://stackoverflow.com): You may or may not have heard of Stack Overflow, but have you really used it? Have you looked for answers - probably yes, but have you posted questions? You will be doing both extensively during the course, so you might as well get used to it!
@@ -41,7 +43,9 @@ This work is not required (after all it is winter break). For those of you who r
 * [Rails Guides](http://guides.rubyonrails.org) Highly readable and concise (yet comprehensive :) guides to the most important parts of Rails. Often better than any book or manual.
 
 ##### Other interesting resources
-* [Codewars](http://www.codewars.com/?language=ruby) -Ruby programming katas.
+* [Codewars](http://www.codewars.com/?language=ruby) - Ruby programming katas.
+* [Ruby on Rails Tutorial](http://ruby.railstutorial.org) - Another excellent Rails tutorial
+
 
 
 
