add lectures from the first week.

--- a/background/06_links_of_interest.md.erb
+++ b/background/06_links_of_interest.md.erb
@@ -4,3 +4,4 @@ type: page
 ---
 #### Links of Interest ####
 * [ORM Hate (Martin Fowler)](http://martinfowler.com/bliki/OrmHate.html)
+* [Using RVM to manage rubies](http://robots.thoughtbot.com/using-rbenv-to-manage-rubies-and-gems/)
