--- a/lectures/iter1/01_welcome.md.erb
+++ b/lectures/iter1/01_welcome.md.erb
@@ -18,13 +18,18 @@ type: page
 * Mugshots are collected!
 
 ##### What is this course about: Software Engineering
-* What is Software Engineering anyway? How is it diffent (or is it different) from Computer Science?
+
+* What is Software Engineering anyway? 
+* <%= Discussion "How is it diffent (or is it different) from Computer Science?" %>
 * <%= link_to_background :learning_objectives %>
 
 ##### Overview and course web site
 
 * How will the whole term work?
-	* <%= link_to_intro :term_overview %>
+* Let's look at the <%= link_to_background :term_overview %>
+* How will the lab work? Does it have it's own grade?
+* How will the projects work?
+* Let's look at the <%= link_to_background :grading %>
 
 ##### Next class
 * Look at homework: <%= link_to_section :lab, :lab_setup %>
