--- a/lectures/iter1/02_ruby.md.erb
+++ b/lectures/iter1/02_ruby.md.erb
@@ -5,14 +5,13 @@ type: page
 order: 2
 ---
 ##### Homework Due For Today
-* Fill in [Skills Inventory](https://docs.google.com/spreadsheet/ccc?key=0Avr8qvL1EWecdENZQkpxQ2V2dEVjbjNaS3NzRjZ0UGc#gid=0)
-	* This is not graded of course
-	* Purpose is to help us put together good teams
 
-##### Ruby
-* Ruby Demo
-
-###### Putting together teams
-* Project Selection
+##### Putting together teams
+* To help in organizing the teams, I am asking everyone to *really quickly* Fill in [Skills Inventory](https://docs.google.com/spreadsheet/ccc?key=0Avr8qvL1EWecdENZQkpxQ2V2dEVjbjNaS3NzRjZ0UGc#gid=0). Obviously this is not graded. The purpose is to help us put together good teams. **Do it now please**
+* Working in teams can suddenly become CHALLENGING
+* You are not trying to become best friends, you are trying to get something done
+* A significant part of your grade will depend on how well your team functions
+* Each member of the team is responsible for their own work and for the welbeing of the team
 * Triangle Exercise
 
+######
