--- a/lectures/iter1/06_rails_intro.md.erb
+++ b/lectures/iter1/06_rails_intro.md.erb
@@ -1,15 +1,14 @@
 ---
 title: Rails Demo
-section: lectures
 type: page
-order: 5
 ---
 ##### Homework due for today
+
 * Read Chapter 2, "Instant Gratification", in AWDR. I highly recommend you follow along with the coding examples and stick with it untill you get it to work. I expect that you will not 'understand' much of what is going on, but try not to let that worry you. One of the objections that some people have about Rails is that there is too much 'magic'. I hope that by the end of the course you will understand what is happening and why, and the 'magic' will turn into 'convenience' and 'productivity/'
+* Read Chapter 3, "The Architecture of Rails Applications" in AWDR. Again I strongly recommend that you work through all the code examples and try to understand what you can. It is complicated and we will go over it many times during this course so expect to not follow everything.
+
 
 ##### Quick Intro to Rails
 
-* Quick Intro to Rails
-* Models
-* Views
-* Controllers
+* Do a live demo of the Instant Gratification session
+* [Here is a shell recording of the session](http://showterm.io/cb6c881188f6deb1845a9)
