combine intro with background sections; add grading; add more on Iteration 1

--- a/lectures/iter1/01_welcome.md.erb
+++ b/lectures/iter1/01_welcome.md.erb
@@ -20,7 +20,7 @@ type: page
 ##### What is this course about: Software Engineering
 
 * What is Software Engineering anyway? 
-* <%= Discussion "How is it diffent (or is it different) from Computer Science?" %>
+* <%= discussion "How is it diffent (or is it different) from Computer Science?" %>
 * <%= link_to_background :learning_objectives %>
 
 ##### Overview and course web site
