add ruby intro, work on grades, and update project proposals

--- a/background/06_grading.md.erb
+++ b/background/06_grading.md.erb
@@ -15,18 +15,28 @@ type: page
 
 ##### Activities
 
-* **Class Participation:** Up to 5 points
+* **Class Participation:** Up to 10 points
 	* Do you show up on time (or let the teachers know ahead of time if you cannot?)
 	* Do you ask good questions, and contribute to the discussion?
 	* Do you help the class move forward and stay focused?
+
 * **Team Work:** Up to 20 points
 	* Do you contribute personally to your team?
 	* Are you a positive influence on productivity?
 	* Do your team mates like working with you?
 	* Are you at the center of problems or of solutions?
-* **Homework:** Up to 20 points
+	* 3 components: peer, self, instructor
+
+* **Blog Post and similar homework:** Up to 10 points
 	* Is your homework thoughtful, comprehensive and correct, or does it look rushed and perfunctory?
-* **Final Project:** Up to 35 points
+
+* **Programming Assignments**: Up to 20 points (Individual PA's)
+	* Does the program work?
+	* Does it use language features in a good way?
+	* Is it designed with good performance in mind?
+	* Does it follow good coding practices?
+
+* **Final Project:** Up to 40 points (Team product)
 	* Does the product work and do what it supposed to do?
 	* Is the architecture reasonable and sound?
 	* Does it represent good software engineering practices
