--- a/lectures/iter1/01_welcome.md.erb
+++ b/lectures/iter1/01_welcome.md.erb
@@ -10,6 +10,7 @@ type: page
 
 	* *Please give this a little thought. It will become important when I challenge you to come up with a product or service idea. It will also be important to me to understand how to lead the class. Submit this as a  post on Piazza.*
 	* <%= deliverable "No more than 1 page, as an email to pitosalas@gmail.com" %>
+1. Study the requirements for the programming assignments: <%= link_to_pa :intro_pa %>. Also read closely the assignment for <%= link_to_pa :PA1 %>. Come ready to discuss the approach you will take in class.
 
 ##### Introductions
 
@@ -22,6 +23,10 @@ type: page
 * What is Software Engineering anyway? 
 * <%= discussion "How is it diffent (or is it different) from Computer Science?" %>
 * <%= link_to_background :learning_objectives %>
+
+##### Programming Assignments
+* Answer questions about programming assignments - see <%= link_to_pa :intro_pa %>
+* Review exactly what <%= link_to_pa :PA1 %> is about. Answer questions.
 
 ##### Overview and course web site
 
