--- a/lab/01_lab_setup.md.erb
+++ b/lab/01_lab_setup.md.erb
@@ -4,10 +4,15 @@ section: lab
 type: page
 order: 1
 ---
+##### Homework required for this lab
+* Learn Git and Github. I suggest reading Chapter 1 and 2 of [The Git Book](http://git-scm.com/book). Also take a look at our own <%= link_to_cribsheet :git %>. You will find helpful info and several other links.
+* Begin work on <%= link_to_pa :PA1 %>. Bring in as much as you have so far.
+
+##### Lab Objectives
 * Setup the VM
 * Create a Github account and experiment
 	* ONE subdirectory per project!
 	* Git init the subdir
 	* Add it as a public repo on Github
 * Check your Ruby installation
-* 
+* Finish work on <%= link_to_pa :PA1 %>.
