--- a/incubator/04_vaperater.md.erb
+++ b/incubator/04_vaperater.md.erb
@@ -1,7 +1,6 @@
 ---
 title: Option - VapeRater
 section: incubator
-order: 2
 type: page
 ---
 ### VapeRater - Vaping Suppy Ratings and Marketplace
@@ -14,26 +13,41 @@ type: page
 
 * **Team Members:** Ken Harsch + 3 others
 
-* **Product Summary:** I recently gave up smoking using an electronic substitute commonly called vaping. Vaping refers to the vaporization and inhalation of propylene glycol containing nicotine and flavoring. Industry sources claim that vaping is as safe as drinking coffee as nicotine is minimally harmful in itself and propylene glycol is considered “generally recognized as safe” by the FDA and is a common ingredient in food and pharmaceuticals. There is little data on the flavorings, however, and the FDA is currently considering regulating the industry with one main focus being providing consumers with ingredient lists. Whether or not vaping is ultimately considered safe, there is general consensus that it is safer than smoking.
+* **Product Summary:** I recently gave up smoking using an electronic substitute commonly called vaping.  Vaping refers to the vaporization and inhalation of propylene glycol containing nicotine and flavoring.  Vaping supply can be broken into two categories: hardware and juice.  
+	
+	Generally speaking, hardware is the equipment used to vaporize the juice and juice is the liquid that is vaporized and inhaled.  There are a handful of hardware manufacturers that seem to have the majority of the trade, though they still do not employ a common terminology which I intend to address.
 
-	Vaping supply can be broken into two categories: hardware and juice. Generally speaking, hardware is the equipment used to vaporize the juice and juice is the liquid that is vaporized and inhaled. There are a handful of hardware manufacturers that seem to have the majority of the trade, though they still do not employ a common terminology. VapeRater will attempt to normalize terminology for our customers. It is in the juice supply, however, that things get really confusing. The juice itself is easy to make. The base (propylene glycol and nicotine) can be purchased on line along with any number of flavor additives. It is also relatively easy to manufacture flavorings. There are hundreds of juice makers with new local makers springing up all the time. There are some existing websites that attempt to list juice makers, but there is no authoritative list and little information about the manufacturers. Given the paucity of information , it is difficult to identify manufacturers and harder still to determine whether their product is of high quality and consistency. VapeRater is intended to bridge the knowledge gap between manufacturers and consumers by providing detailed information and a forum for consumers to rate and rank manufacturers through a simple interface.
+	In the juice supply, however, things get really confusing.  The juice itself is easy to make.  The base (propylene glycol and nicotine) can be purchased on line along with any number of flavor additives.  It is also relatively easy to manufacture flavorings. There are hundreds of juice makers with new local makers springing up all the time.  There are some existing websites that attempt to list juice makers, but there is no authoritative list and little information about the manufacturers.  Given the paucity of information , it is difficult to identify manufacturers and harder still to determine whether their product is of high quality and consistency.  VapeRater is intended to bridge the knowledge gap between manufacturers and consumers by providing detailed information and a forum for consumers to rate and rank manufacturers through a simple interface.  
 
-	Information gathering is expected to require a good deal of effort, though for the purpose of this class, I intend to focus on what types of information will be required and how it will be presented. In the long run I envision VapeRater vetting manufacturers through a combination of self reporting and spot checking. Also, I intend to commercialize the product by providing a marketplace where VapeRater collects money via consumer accounts and sends the orders, minus a fee, to the manufacturers. This will allow a consumer to purchase multiple brands in a single transaction. In addition to the website, I intend to build a simple phone app that will allow users to place orders quickly through their VapeRater accounts.
-
-	To encourage manufacturers to participate in the system, it will be important to build a large user base. By creating a simple interface with ratings and ingredient lists for various manufacturers, I hope to reach a large segment of the vaping community. Once established, the system can be easily monetized by offering our user base to manufacturers for a fee.
+	To encourage manufacturers to participate in the system, it will be important to build a large user base. By creating a simple interface with ratings and ingredient lists for various manufacturers, I hope to reach a large segment of the vaping community. Once a user base has been established, I intend to commercialize the product by providing a marketplace where VapeRater collects money via consumer accounts and sends the orders, minus a fee, to the manufacturers.  This will allow a consumer to purchase multiple brands in a single transaction.  In addition to the website, I intend to build a simple phone app that will allow users to place orders quickly through their VapeRater accounts.  
 
 * **Elevator pitch:** The annual US electronic cigarette market, commonly called vaping, just passed $1 billion. Creation of the “e juice” - the substance with nicotine that is vaporized - is simple and has become a cottage industry. There is no clearinghouse for information about juice or the hardware used to vaporize it. VapeRater will fill this niche and eventually serve as a marketplace for vaping supplies
 
-* **Describe the customer(s):** Our customer base is smokers, currently estimated at 43.8 million Americans, 1.3 billion worldwide.
+* **Personal statement:** Having recently switched from cigarettes to vaping, I have found it very difficult to find reviews of suppliers. The industry just passed $1 billion/ year and yet there is no comprehensive marketplace and generally spotty information. By creating a comprehensive database with product information and consumer ratings, we could provide a service to both consumers and manufacturers while making profits with minimal overhead.
 
-* **Describe what "jobs" the product will do for the customer:** VapeRater will provide a database of available vaping supplies with a simple interface, consumer ratings, and eventually a marketplace.
+* **Describe the customer(s):** Our  user base is smokers, currently estimated at 43.8 million Americans, 1.3 billion worldwide.  In addition to potential vapers, we will be providing a service to the manufacturers of hardware and juice.  Other stakeholders could also include anyone with a general interest in vaping like retailers of vaping supplies and advertisers who may want to target a demographic that we serve.
+
+* **Describe what "jobs" the product will do for the customer:** For vapers, the site will provide much needed and hard to find information including ingredients and customer ratings. It will also provide a one stop shop where products from a variety of manufacturers can be purchased in a single transaction. 
 
 * **Money**: Simply put: commission. We pass orders through our site to the suppliers, handling the money and collecting a commission of 10 to 15%. We may eventually consider warehousing more popular devices/supplies.
 
 * **Customer Pains/Gains:** [describe what problems the product will eliminate for the customer]
-There are dozens of vaping hardware suppliers and hundreds of juice manufacturers and I have found nothing close to a comprehensive listing much less a side-by-side comparison. VapeRater will provide a place for comparison shopping with the intent of becoming a one stop shop for vaping supplies.
+	* Customer pains:
+		* Hardware:
+			* Users are confused by inconsistent terminology in the hardware segment.
+			* Users have difficulty finding out which pieces of hardware are compatible.
+		* Juice:
+			* Users are hampered by overwhelming choice
+			* There is limited information about quality and ingredients.
+			* There is no side by side comparison of manufacturers
+			* Each manufacturer has it's own retail outlet with no comprehensive marketplace.
+	* Manufacturer pains:
+		* Limited customer feedback
+		* Lack of information about competitors
+		* Difficulty and expense of marketing research
+		* Difficulty in targeting advertising
+		* For small businesses - difficulty in reaching a large customer base
 
-* **Personal statement:** Having recently switched from cigarettes to vaping, I have found it very difficult to find reviews of suppliers. The industry just passed $1 billion/ year and yet there is no comprehensive marketplace and generally spotty information. By creating a comprehensive database with product information and consumer ratings, we could provide a service to both consumers and manufacturers while making profits with minimal overhead.
 
 ##### Appendix 1: Schema
 
