--- a/background/06_grading.md.erb
+++ b/background/06_grading.md.erb
@@ -20,6 +20,9 @@ type: page
 	* Do you ask good questions, and contribute to the discussion?
 	* Do you help the class move forward and stay focused?
 
+* **Blog Post and similar homework:** Up to 10 points
+	* Is your homework thoughtful, comprehensive and correct, or does it look rushed and perfunctory?
+
 * **Team Work:** Up to 20 points
 	* Do you contribute personally to your team?
 	* Are you a positive influence on productivity?
@@ -27,10 +30,7 @@ type: page
 	* Are you at the center of problems or of solutions?
 	* 3 components: peer, self, instructor
 
-* **Blog Post and similar homework:** Up to 10 points
-	* Is your homework thoughtful, comprehensive and correct, or does it look rushed and perfunctory?
-
-* **Programming Assignments**: Up to 20 points (Individual PA's)
+* **Programming Assignments**: Up to 20 points (Individual PA's as 
 	* Does the program work?
 	* Does it use language features in a good way?
 	* Is it designed with good performance in mind?
@@ -39,5 +39,6 @@ type: page
 * **Final Project:** Up to 40 points (Team product)
 	* Does the product work and do what it supposed to do?
 	* Is the architecture reasonable and sound?
-	* Does it represent good software engineering practices
+	* Does it represent good software engineering practices?
+	* Can you explain how it works?
 	* Did you go well beyond the basic Rails structures that you learned in class and discover and apply new techniques, tools, technologies?
