--- a/lectures/iter1/01_welcome.md.erb
+++ b/lectures/iter1/01_welcome.md.erb
@@ -33,7 +33,7 @@ type: page
 * How will the whole term work?
 * Let's look at the <%= link_to_background :term_overview %>
 * How will the lab work? Does it have it's own grade?
-* How will the projects work?
+* How will the projects work? <%= link_to_background :project_process %>
 * Let's look at the <%= link_to_background :grading %>
 
 ##### Next class
