--- a/lectures/iter1/02_ruby.md.erb
+++ b/lectures/iter1/02_ruby.md.erb
@@ -8,6 +8,8 @@ type: page
 
 To help in organizing the teams, I am asking everyone to *really quickly* Fill in [Skills Inventory](https://docs.google.com/spreadsheet/ccc?key=0Avr8qvL1EWecdENZQkpxQ2V2dEVjbjNaS3NzRjZ0UGc#gid=0). Obviously this is not graded. The purpose is to help us put together good teams. **Do it now please**
 
+#### Working in teams
+
 * Working in teams can suddenly become CHALLENGING
 * You are not trying to become best friends, you are trying to get something done
 * A significant part of your grade will depend on how well your team functions
