lecture number support

--- a/index.md.erb
+++ b/index.md.erb
@@ -1,8 +1,7 @@
 ---
 title: Welcome!
-section: root
-order: 1
 type: page
+section: background
 ---
 <div class="jumbotron"> 
 	<h2>Software Engineering for ITE</h2>
