--- a/lectures/iter1/01_welcome.md.erb
+++ b/lectures/iter1/01_welcome.md.erb
@@ -8,7 +8,7 @@ type: page
 
 1.  Why are you taking this class? Why are you getting a COSI degree? What do you see yourself doing after graduating? What are the top three things that you hope for this class?
 
-	* *Please give this a little thought. It will become important when I challenge you to come up with a product or service idea. It will also be important to me to understand how to lead the class. Submit this as a  post on Piazza.*
+	* *Please give this a little thought. It will become important when I challenge you to come up with a product or service idea. It will also be important to me to understand how to @lead the class. Submit this as a  post on Piazza.*
 	* <%= deliverable "No more than 1 page, as an email to pitosalas@gmail.com" %>
 1. Study the requirements for the programming assignments: <%= link_to_pa :intro_pa %>. Also read closely the assignment for <%= link_to_pa :PA1 %>. Come ready to discuss the approach you will take in class.
 
@@ -33,7 +33,7 @@ type: page
 * How will the whole term work?
 * Let's look at the <%= link_to_background :term_overview %>
 * How will the lab work? Does it have it's own grade?
-* How will the projects work? <%= link_to_background :project_process %>
+* How will the projects work? <%= link_to_background :project_process %>@
 * Let's look at the <%= link_to_background :grading %>
 
 ##### Next class
